--- a/src/scss/abstracts/_animations.scss
+++ b/src/scss/abstracts/_animations.scss
@@ -74,3 +74,12 @@
     transform: translateY(1rem);
   }
 }
+
+@keyframes up-down {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-30%);
+  }
+}
