--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,7 +3,7 @@
 .header {
   @include container;
   display: flex;
-  justify-content: space-between;
+  // justify-content: space-between;
   align-items: center;
   gap: $spacing-3;
   padding: $spacing-2;
@@ -20,52 +20,70 @@
     padding: $spacing-2;
 
     @media (max-width: map-get($breakpoint, medium)) {
-      margin-left: 3.5rem;
+      // margin-left: 3.5rem;
     }
   }
 
   &__nav {
     display: flex;
     gap: $spacing-2;
+    margin-left: auto;
+  }
 
-    .btn--menu {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      width: 3rem;
-      height: 2rem;
-      position: absolute;
-      left: $spacing-2;
-      z-index: 99999999;
+  .btn--menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 2.25rem;
+    height: 2rem;
+    // position: absolute;
+    // left: $spacing-2;
+    position: relative;
+    z-index: 99999999;
+    outline: 1px solid lime;
+    gap: 0;
+    padding: 0;
 
-      .bar {
-        width: 100%;
-        height: 2px;
-        background-color: white;
-        transform-origin: left;
-        transition: 300ms linear;
+    .bar {
+      width: 80%;
+      min-height: 2px;
+      background-color: $light;
+      transition-delay: 300ms;
+
+      &:nth-child(1),
+      &:nth-child(3) {
+        position: absolute;
+        transition: top 300ms linear 300ms, transform 300ms linear;
       }
 
-      &[aria-expanded="true"] {
-        position: fixed;
-
-        & .bar:nth-child(1) {
-          width: 1.25rem;
-          transform: rotate(45deg);
-        }
-        & .bar:nth-child(2) {
-          margin-left: 50%;
-          width: 0;
-        }
-        & .bar:nth-child(3) {
-          width: 1.25rem;
-          transform: rotate(-45deg);
-        }
+      &:nth-child(1) {
+        top: 20%;
       }
 
-      @media (min-width: map-get($breakpoint, medium)) {
-        display: none;
+      &:nth-child(3) {
+        top: calc(80% - 2px);
       }
+    }
+
+    &[aria-expanded="true"] {
+      & .bar:nth-child(1) {
+        top: 50%;
+        transform: rotate(40deg);
+        transition: top 300ms linear, transform 300ms linear 300ms;
+      }
+      & .bar:nth-child(2) {
+        opacity: 0;
+      }
+      & .bar:nth-child(3) {
+        top: 50%;
+        transform: rotate(-40deg);
+        transition: top 300ms linear, transform 300ms linear 300ms;
+      }
+    }
+
+    @media (min-width: map-get($breakpoint, medium)) {
+      display: none;
     }
   }
 
