--- a/src/scss/components/_searchbar.scss
+++ b/src/scss/components/_searchbar.scss
@@ -3,8 +3,10 @@
 .searchbar {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: calc(100% - $spacing-2 * 2);
   height: auto;
+  height: 3rem;
   position: absolute;
   top: 6rem;
   left: $spacing-2;
@@ -19,7 +21,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    // width: 50%;
     width: 100%;
     height: 3rem;
     backdrop-filter: blur(15px);
@@ -27,7 +28,8 @@
     border: 1px solid #fff;
     border-radius: $spacing-4;
     overflow: hidden;
-    animation: slide-up 500ms cubic-bezier(0.79, 0.33, 0.14, 0.53);
+    transform-origin: center;
+    animation: grow 500ms cubic-bezier(0.79, 0.33, 0.14, 0.53);
   }
 
   .form-control {
@@ -111,21 +113,19 @@
   &__result-list-genres {
     font-size: map-get($font-size, 6);
   }
-
-  @media (prefers-reduced-motion: reduce) {
-    * {
-      animation-duration: 0.001ms !important;
-      animation-iteration-count: 1 !important;
-      transition-duration: 0.001ms !important;
-    }
-  }
 }
 
-@keyframes slide-up {
+@keyframes grow {
   0% {
+    height: 0;
+    width: 0;
+  }
+  50% {
+    height: 3rem;
     width: 0;
   }
   100% {
+    height: 3rem;
     width: 100%;
   }
 }
