--- a/src/scss/components/_app.scss
+++ b/src/scss/components/_app.scss
@@ -6,7 +6,7 @@ html {
 
 body {
   font-family: $font-family;
-  overscroll-behavior: none;
+  // overscroll-behavior: none;
   color: $light;
   min-height: 100dvh;
   background: $gradient;
